--- a/web/product/templates/css/productquery.css
+++ b/web/product/templates/css/productquery.css
@@ -2,13 +2,15 @@
 
 div#productquery{
 margin:0px 15px 5px 15px;
-text-align:center;
 float:left;
+width: 45%;
+overflow: hidden;
+white-space: nowrap;
+text-overflow: ellipsis;
 }
 
 div#productquery div.fang{
 padding:3px;
-text-align:center;
 border:1px #b1b1b1 solid;
 }
 
