--- a/web/product/templates/tpl_product_query.htm
+++ b/web/product/templates/tpl_product_query.htm
@@ -7,10 +7,12 @@
 <div id="productquery">
 	<div class="fang" style="width:{#picw#}px;height:{#pich#}px">
 		<div class="picFit" style="width:{#picw#}px;height:{#pich#}px">
-		<a href="{#link#}" target="{#target#}" ><img src="{#src#}" style="width:{#picw#}px;height:{#pich#}px" border="0" /></a>
+		<a href="{#link#}" target="{#target#}" title="{#title#}">
+			<img src="{#src#}" style="width:{#picw#}px;height:{#pich#}px" border="0" />
+		</a>
 		</div>
 	</div>
-	<a href="{#link#}" target="{#target#}" {#bold#} {#red#} class="prodtitle">{#title#}</a>
+	<a href="{#link#}" target="{#target#}" {#bold#} {#red#} class="prodtitle" title="{#title#}">{#title#}</a>
 </div>
 <!-list->
 <!-end->
