--- a/web/product/templates/tpl_product_content.htm
+++ b/web/product/templates/tpl_product_content.htm
@@ -2,7 +2,7 @@
 <link href="css/productcontent.css" rel="stylesheet" type="text/css" />
 <script type=text/javascript src="{#CP#}js/productcontent.js"></script>
 
-<div id="productcontent">
+<div id="productcontent" title="{#title#}">
 	<div class="productpics">
 		<div class="piczone">
 			<table align="center" cellpadding="0" cellspacing="0">
