--- a/web/menu/templates/images/mainmenu/E.css
+++ b/web/menu/templates/images/mainmenu/E.css
@@ -4,19 +4,21 @@
    overflow:hidden;
    width:100%;
    color:#fff;
-   background-color:#bbb;
+   background-color:#7D0B0B;
+   padding-left: 550px;
+}
+
+#menumain a{
+   font-weight: bold;
 }
 
 #menumain .menumain{
    float:left;
    width:99px;
-   height:30px;
+   height:32px;
    color:#fff;
-   border-left:1px solid #d6d6d6;
-   border-top:1px solid #d6d6d6;
-   line-height:30px;
+   line-height:32px;
    text-align:center;
-   margin:-1px 1px 1px -1px ;
 }
 
 
@@ -24,20 +26,20 @@
    color: #fff; 
    display:block;
    text-decoration: none;
-   line-height:30px;
+   line-height:32px;
 }
 
 #menumain .menumain a:visited {
    color: #fff; 
    display:block;
    text-decoration: none;
-   line-height:30px;
+   line-height:32px;
 }
 
 #menumain .menumain a:hover {
    color: #fff; 
    text-decoration: none;
-   background-color:#cacaca;
-   line-height:30px;
+   background-color:#995A5A;
+   line-height:32px;
 } 
 
