Style simple search component

--- a/web/product/templates/css/searchform_simple.css
+++ b/web/product/templates/css/searchform_simple.css
@@ -1,21 +1,42 @@
 /* ============ËÑË÷±íµ¥============== */
 div.searchform_product_simple{
-margin:0px 4px 0px 0px;
-padding:0px;
-float:left;
+  margin:0px 4px 0px 0px;
+  padding:0px;
+  float:left;
 }
 
 div.searchform_product_simple .input{
-border:1px #ddd solid;
-width:110px;
-height:20px;
-line-height:20px;
-padding-left:3px;
-color:#999;
-background:#fff;
+  border:1px #ddd solid;
+  width:110px;
+  height:20px;
+  line-height:20px;
+  padding-left:3px;
+  color:#999;
+  background:#fff;
+  margin-left: 15px;
 }
 
 div.probutton{
-margin:0px;
-padding:0px;
+  margin:0px;
+  padding:0px;
+}
+
+div.probutton button{
+  height: 21px;
+  background: black;
+  color: white;
+  border: 0;
+}
+
+h1.search_header {
+  margin: 12px 0 5px 15px;
+}
+
+.search_column {
+  width: 200px;
+}
+
+.icon_column img {
+  width: 50px;
+  padding: 15px 0 0 20px;
 }
