Fix site logo url

--- a/web/advs/templates/tpl_logo.htm
+++ b/web/advs/templates/tpl_logo.htm
@@ -1,7 +1,7 @@
 <!-start->
 <!-start->
 <!-list->
-<a href="{#link#}"><img src="{#src#}"border="0" /></a>
+<a href="http://hyhy888.com/index.php"><img src="{#src#}"border="0" /></a>
 <!-list->
 <!-menu->
 <object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0"  width="{#w#}" height="{#h#}">
