--- a/web/product/templates/tpl_product_search_simple.htm
+++ b/web/product/templates/tpl_product_search_simple.htm
@@ -7,7 +7,7 @@
         <image src="images/lense-icon.png"/>
       </td>
       <td class="search_column">
-        <h1 class="search_header">商品快速搜索</h1>
+        <h1 class="search_header">商品搜索</h1>
         <div class="searchform_product_simple">
           <input name="key" type="text" id="searchform_product_key" value="{#key#}" class="input">
         </div>
