--- a/web/product/templates/tpl_product_query.htm
+++ b/web/product/templates/tpl_product_query.htm
@@ -5,14 +5,14 @@
 
 <!-list-> 
 <div id="productquery">
-	<div class="fang" style="width:{#picw#}px;height:{#pich#}px">
-		<div class="picFit" style="width:{#picw#}px;height:{#pich#}px">
-		<a href="{#link#}" target="{#target#}" title="{#title#}">
-			<img src="{#src#}" style="width:{#picw#}px;height:{#pich#}px" border="0" />
-		</a>
+	<a href="{#link#}" target="{#target#}" >
+	  <div class="fang" style="width:{#picw#}px;height:{#pich#}px" title="{#title#}">
+		<div class="picFit" style="width:{#picw#}px;height:{#pich#}px">		
+		  <img src="{#src#}" style="width:{#picw#}px;height:{#pich#}px" border="0" />
 		</div>
-	</div>
-	<a href="{#link#}" target="{#target#}" {#bold#} {#red#} class="prodtitle" title="{#title#}">{#title#}</a>
+	  </div>
+	  {#title#}
+	</a>
 </div>
 <!-list->
 <!-end->
