--- a/web/product/templates/tpl_product_query.htm
+++ b/web/product/templates/tpl_product_query.htm
@@ -1,6 +1,11 @@
 <!-start->
 <link href="css/productquery.css" rel="stylesheet" type="text/css" />
+<div id="categoryname">
+    <h1 id="catname">{#catname#}<h1>
+	<hr width="100%" color="#696969" size="1">
+</div>
 <!-start->
+
 
 
 <!-list-> 
@@ -23,8 +28,8 @@ $().picFit("{#fittype#}");
 </script>
 
 <div id="showpages" >
-	  <div id="pagesinfo">共{#totalnums#}条 每页{#pagesshownum#}条 页次：{#pagesnow#}/{#pagestotal#}</div>
-	  <div id="pages">{#showpages#}</div>
-     </div>
+	<div id="pagesinfo">共{#totalnums#}条 每页{#pagesshownum#}条 页次：{#pagesnow#}/{#pagestotal#}</div>
+	<div id="pages">{#showpages#}</div>
+</div>
 
 <!-end->
